--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -20,7 +20,7 @@
     
     <h2>Add a new task</h2>
     
-    @form(routes.Application.newTaskUser("user")) {
+    @form(routes.Application.newTaskUser("anonimo")) {
         
         @inputText(taskForm("label")) 
         
